Prueba para ver si se ve la pag completa en el telefono

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
     #navbar {
         background-color: var(--main-red);
         position: fixed;
-        width: 100%;
+        width: 100vw;
         display: flex;
         justify-content: center;
         box-shadow: 0 2px 0 rgb(0 0 0 / 40%);
@@ -40,7 +40,6 @@
 
     #navbar ul {
         display: flex;
-        margin-right: 2rem;
     }
 
     #navbar li {
