--- a/mobile.css
+++ b/mobile.css
@@ -29,22 +29,50 @@
         grid-gap: 4.5rem;
     }
 
+    .contact-section-header h2 {
+        font-size: 5rem;
+    }
+
     .contact-links {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 2rem 4rem;
+        width: 100vw;
+        padding: 0 1.95rem;
+        display: flex;
     }
 
     .contact-links a {
+        display: flex;
+        width: 100%;
+        height: 2.4rem;
+        margin: 1rem 0;
+        padding: 0;
         justify-content: center;
+        align-items: center;
+    }
+
+    .contact-links i {
+        margin: 0;
     }
 
     .contact-links__text {
         display: none;
     }
 
-    .contact-section-header h2 {
-        font-size: 5rem;
+    #contact-links__Email {
+        display: none;
+    }
+
+    #contact-links__Email-mobile {
+        display: flex;
+        margin-top: 2rem;
+        align-items: center;
+    }
+
+    #contact-links__Email-mobile i {
+        margin-right: 0.6rem;
+    }
+
+    .contact-links__text-mobile {
+        font-size: 1.6rem;
     }
 
     footer {
